Renamed Testing folder

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@
 ################################################################################
 
 /PackageInstallerExercise.Test/obj/Debug
+/tests/obj/Debug
