Test Run - Parse Dependency List (Red)

--- a/source/PackageInstallerExercise.csproj
+++ b/source/PackageInstallerExercise.csproj
@@ -46,7 +46,9 @@
   <ItemGroup>
     <Compile Include="ConsoleOutputWriter.cs" />
     <Compile Include="ConsoleReturnTypes.cs" />
+    <Compile Include="IDependencyMapGenerator.cs" />
     <Compile Include="IOutputWriter.cs" />
+    <Compile Include="PackageDependencyMapGenerator.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
