Refactered Namespaces and class names

--- a/source/PackageInstallerExercise.csproj
+++ b/source/PackageInstallerExercise.csproj
@@ -49,7 +49,7 @@
     <Compile Include="Types\ConsoleReturnTypes.cs" />
     <Compile Include="Interfaces\IDependencyMapGenerator.cs" />
     <Compile Include="Interfaces\IOutputWriter.cs" />
-    <Compile Include="PackageDependencyMapGenerator.cs" />
+    <Compile Include="Packages\PackageDependencyMapGenerator.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
