--- a/source/PackageInstallerExercise.csproj
+++ b/source/PackageInstallerExercise.csproj
@@ -45,7 +45,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ConsoleOutputWriter.cs" />
-    <Compile Include="Interfaces\IPackageDependencyMap.cs" />
+    <Compile Include="Interfaces\IDependencyMap.cs" />
     <Compile Include="Types\ConsoleReturnTypes.cs" />
     <Compile Include="Interfaces\IDependencyMapGenerator.cs" />
     <Compile Include="Interfaces\IOutputWriter.cs" />
