--- a/tests/PackageInstallerExercise.Test.csproj
+++ b/tests/PackageInstallerExercise.Test.csproj
@@ -52,7 +52,8 @@
   <ItemGroup>
     <Compile Include="ProgramTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="PackageDependencyMapGeneratorTests.cs" />
+    <Compile Include="Packages\PackageDependencyMapGeneratorTests.cs" />
+    <Compile Include="Packages\PackagesDependencyMapTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\source\PackageInstallerExercise.csproj">
