--- a/source/PackageInstallerExercise.csproj
+++ b/source/PackageInstallerExercise.csproj
@@ -46,6 +46,7 @@
   <ItemGroup>
     <Compile Include="ConsoleOutputWriter.cs" />
     <Compile Include="Interfaces\IDependencyMap.cs" />
+    <Compile Include="PackageContainsCycleException.cs" />
     <Compile Include="Packages\Interfaces\IPackage.cs" />
     <Compile Include="Packages\Package.cs" />
     <Compile Include="Packages\PackagesDependencyMap.cs" />
