--- a/tests/PackageInstallerExercise.Test.csproj
+++ b/tests/PackageInstallerExercise.Test.csproj
@@ -50,6 +50,7 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="Packages\PackageDuplicateException.cs" />
     <Compile Include="ProgramTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Packages\PackageDependencyMapGeneratorTests.cs" />
